# context-engineering-template

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  mkdocs.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: execute-frp.md  execute-prp.md  generate-brd.md  generate-frp-from-prd.md  generate-frp.md  generate-prd-from-brd.md  generate-prp.md
.cline/: config.json
.devcontainer/: devcontainer.json
.devcontainer/setup_python_claude/: devcontainer.json
.gemini/: settings.json
.github/scripts/: create_pr.sh
.github/workflows/: bump-my-version.yaml  codeql.yaml  generate-deploy-mkdocs-ghpages.yaml  links-fail-fast.yaml  ruff.yaml  write-llms-txt.yaml
context/BRDs/: example_ai_assistant.md
context/PRPs/: feature_1_mcp_server.md  feature_2_mcp_client.md  feature_3_streamlit_gui.md
context/business_inputs/: example_ai_assistant.md
context/config/: paths.md
context/examples/features/: feature_1_mcp_server.md
context/templates/: brd_base.md  business_input_base.md  feature_base.md  frp_base.md  prd_base.md  prp_base.md
docs/: CABIO-implementation-guide.md  CABIO-product-roadmap.md  CABIO-vision.md  examples.md  llms.txt  usage-guide.md
docs/architecture/: Business-Driven-Development-CABIO-Enterprise-Concise.plantuml  Business-Driven-Development-CABIO-Enterprise-Phase.plantuml  Business-Driven-Development-CABIO-SMB-Concise.plantuml  Business-Driven-Development-CABIO-SMB-Phase.plantuml  Business-Driven-Development-Current-Concise.plantuml  Business-Driven-Development-Current.plantuml  README.md  sequence_diagram.mermaid  sequence_diagram_concise.mermaid
docs/architecture/styles/: github-dark.puml  github-light.puml
examples/mcp-server-client/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
examples/mcp-server-client/context/PRPs/: feature_1_mcp_server.md  feature_2_mcp_client.md  feature_3_streamlit_gui.md
examples/mcp-server-client/context/features/: feature_1_mcp_server.md  feature_2_mcp_client.md  feature_3_streamlit_gui.md
examples/mcp-server-client/context/outputs/: client_get_date_input.json  client_get_weather_input.json  client_invalid_tool.json  client_roll_dice_input.json  get_date_example.json  get_weather_example.json  roll_dice_example.json  streamlit_error_handling.json  streamlit_get_date_interaction.json  streamlit_get_weather_interaction.json  streamlit_roll_dice_interaction.json
examples/mcp-server-client/context/templates/: feature_base.md
examples/mcp-server-client/src/gui/: __init__.py  app.py
examples/mcp-server-client/src/gui/components/: __init__.py  connection.py  history.py  tool_forms.py
examples/mcp-server-client/src/gui/models/: __init__.py  gui_models.py
examples/mcp-server-client/src/gui/utils/: __init__.py  async_helper.py  formatting.py  mcp_wrapper.py  validation.py
examples/mcp-server-client/src/mcp_client/: __init__.py  cli.py  client.py  transport.py
examples/mcp-server-client/src/mcp_client/models/: __init__.py  responses.py
examples/mcp-server-client/src/mcp_server/: __init__.py  server.py
examples/mcp-server-client/src/mcp_server/models/: __init__.py  requests.py
examples/mcp-server-client/src/mcp_server/tools/: __init__.py  base.py  date_time.py  dice.py  weather.py
examples/mcp-server-client/tests/: test_cli.py  test_gui.py  test_mcp_client.py  test_mcp_server.py
examples/mcp-server-client/tests/fixtures/: mcp_messages.py
examples/mcp-server-client/tests/test_tools/: test_dice.py
scripts/: generate-plantuml-png.sh
src/: __init__.py  main.py  py.typed  pyproject.toml
src/gui/: app.py
src/gui/components/: connection.py  history.py  tool_forms.py
src/gui/utils/: async_helper.py  mcp_wrapper.py
src/mcp_client/: cli.py  client.py  transport.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/models/: __init__.py  requests.py
src/mcp_server/tools/: __init__.py  base.py  date_time.py  dice.py  weather.py
tests/: test_cli.py  test_gui.py  test_mcp_client.py  test_mcp_server.py  test_tests.py
tests/fixtures/: mcp_messages.py
tests/test_tools/: test_date_time.py  test_dice.py  test_weather.py
